Fri Dec 20 18:20:32 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* krb5_16.def: Change name of library in file to be krb5_16.def
	 	[PR#302]

Sat Nov 23 00:25:25 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>
	
	* libkrb5.def: Renamed to krb5_16.def [PR#204]

	* Makefile.in (all-windows): Change name of dll from krb5_16.dll,
		which will be the final name of the DLL. [PR#204]

Wed Nov 20 18:28:47 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (clean-windows): Change the name of the Windows (16)
		dll to be krb516.dll, instead of libkrb5.dll

Fri Jul 12 20:32:29 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* win_glue.c: Added TIMEBOMB_INFO string which tells the user the
 	 	URL to look for more information about getting the new
 	 	version of the product.

Wed Jul 10 20:32:22 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* win_glue.c (krb5_win_do_init): New routine which does the
		timebomb and version server checking.  Windows 3.1 doesn't
		allow you to do any messaging calls in LibMain, so the
		timebomb and version server code was moved to
		krb5_win_do_init(), which is called by krb5_init_context().

Tue Jul  9 17:31:57 1996  Marc Horowitz  <marc@mit.edu>

	* configure.in (CONFIG_DIRS): add rpc subdir

Tue Jul  9 16:44:22 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* win_glue.c: Add a quick hack so we can time-bomb the libkrb5.dll
		and sapkrb5.dll when we compile them at MIT.
	
	* Makefile.in (sap_glue.obj): Build the sapkrb5.dll with the
		timebomb enabled (since we couldn't get the version server
		code working).

Wed Jun 12 12:52:30 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (lib-windows): Replace spaces with tab

Mon Jun 10 23:40:48 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in (lib-windows): Add production rule for sapkrb5.dll.
		Don't include config/windows.in, since that's included
		by wconfig.

	* win_glue.c: Add a quick hack for krb5-SAP so that we call
		the version server --- this is conditionalized on