@@ -1,3 +1,8 @@
+Sat Dec 21 01:23:48 1996  Theodore Y. Ts'o  <tytso@mit.edu>
+
+	* win_glue.c: Change the timebomb to be June 1, 1997.  Make the
+		timebomb exit the application more gracefully.
+
 Fri Dec 20 18:20:32 1996  Theodore Y. Ts'o  <tytso@mit.edu>
 
 	* krb5_16.def: Change name of library in file to be krb5_16.def
